@@ -49,7 +49,7 @@ namespace parity
 				{
 					size_t entryLen = ::strlen(entry->option);
 
-					if(entryLen == 0 ||	(entryLen > 1 && argvLen > 1 && ((entry->option[0] == '-' && argv[i][0] == '-') ||
+					if(entryLen == 0 ||	(entryLen >= 1 && argvLen >= 1 && ((entry->option[0] == '-' && argv[i][0] == '-') ||
 						(entry->option[0] == '/' && (argv[i][0] == '-' || argv[i][0] == '/'))) &&
 						::strncmp(&entry->option[1], &argv[i][1], entryLen - 1) == 0) ||
 						(entry->option[0] == '.' && /* (breaks gcc abs. paths) argv[i][0] != '/' && */ argv[i][0] != '-' 
