@@ -39,6 +39,7 @@ namespace parity
 		bool setPositionIndep(const char* option, const char* argument, bool& used);
 		bool setForcedLanguage(const char* option, const char* argument, bool& used);
 		bool addSource(const char* option, const char* argument, bool& used);
+		bool addSourceFromStdin(const char* option, const char* argument, bool& used);
 		bool setShortWchar(const char* option, const char* argument, bool& used);
 		bool setRuntime(const char* option, const char* argument, bool& used);
 	}
